[metadata]
name = torch_subspace
version = 0.0.1
author = Yuhan Liu
author_email = yliu1021@outlook.com
description = Decomposing weights into subspaces
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
