[metadata]
name = torch_subspace
version = 0.0.1
author = Yuhan Liu
author_email = yliu1021@outlook.com
description = Decomposing weights into subspaces
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    torch == 1.11.0
    torchvision == 0.12.0
    torchaudio == 0.11.0

[options.packages.find]
where = torch_subspace
